--- a/ansible/inventories/hosts.yml
+++ b/ansible/inventories/hosts.yml
@@ -1,13 +1,13 @@
 ---
-prometheus_servers:
+prometheus-servers:
   hosts:
     prometheus-1:
-      ansible_host: 84.201.130.8
+      ansible-host: 84.201.130.8
 
-grafana_servers:
+grafana-servers:
   hosts:
     grafana-01:
-      ansible_host: 89.169.136.163
+      ansible-host: 89.169.136.163
 
 node-exporter:
   hosts:
